name:           nidal
version:        0.1
license:        GPL
license-file:   LICENSE
author:         dan corson <danl@alum.mit.edu>
synopsis:       guess sentence acronyms
build-type:     Simple
build-depends:  base, haskell98, parsec >= 3, containers, MonadRandom, FUtil

executable:     nidal
main-is:        Main.hs
hs-source-dirs: src
